Update and rename index (11).html to index.html

--- a/index.html
+++ b/index.html
@@ -2131,7 +2131,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/LVkJHnn28', {
+          fetch('https://submit-form.com/kajcBOlSt', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -2188,7 +2188,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/LVkJHnn28', {
+          fetch('https://submit-form.com/kajcBOlSt', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -2326,6 +2326,7 @@
     </script>
   </body>
 </html>
+
 
 
 
